syntax = "proto3";

package admin.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "api/admin/v1;v1";


service AdminService {
  // 登陆
  rpc Login (LoginReq) returns (User) {
    option (google.api.http) = {
      post: "/api/v1/login"
      body: "*"
    };
  }
  // 登出
  rpc Logout (LogoutReq) returns (LogoutReply) {
    option (google.api.http) = {
      post: "/api/v1/logout"
      body: "*"
    };
  }
  // 注册
  rpc Register (RegisterReq) returns (RegisterReply) {
    option (google.api.http) = {
      post: "/api/v1/register"
      body: "*"
    };
  }

  // 用户列表
  rpc ListUser (google.protobuf.Empty) returns (ListUserReply) {
    option (google.api.http) = {
      get: "/api/v1/users"
    };
  }

  rpc GetPublicContent (google.protobuf.Empty) returns (Content) {
    option (google.api.http) = {
      get: "/api/v1/all"
    };
  }
  rpc GetUserBoard (google.protobuf.Empty) returns (Content) {
    option (google.api.http) = {
      get: "/api/v1/user"
    };
  }
  rpc GetModeratorBoard (google.protobuf.Empty) returns (Content) {
    option (google.api.http) = {
      get: "/api/v1/mod"
    };
  }
  rpc GetAdminBoard (google.protobuf.Empty) returns (Content) {
    option (google.api.http) = {
      get: "/api/v1/admin"
    };
  }
}

message Content {
  string content = 1;
}

message User {
  optional uint64 id = 1;
  optional string user_name = 2 [json_name = "user_name"];
  optional string password = 3 [json_name = "password"];
  optional string nick_name = 4 [json_name = "nick_name"];
  optional string email = 5 [json_name = "email"];
  repeated string roles = 6;
  optional string token = 7;
}

message ListUserReply {
  repeated User items = 1;
  int32 total = 2;
}

// 请求 - 登录
message LoginReq {
  string user_name = 1 [json_name = "user_name"];
  string password = 2;
}
// 回应 - 登录
message LoginReply {
  User user = 1;
}

// 请求 - 登出
message LogoutReq {
  uint64 id = 1;
}
// 回应 - 登出
message LogoutReply {
  uint64 id = 1;
}

message RegisterReq {
  string username = 1;
  string password = 2;
  string email = 3;
}
message RegisterReply {
  string message = 1;
  bool success = 2;
}
